add strava subscriber

--- a/.gitignore
+++ b/.gitignore
@@ -547,4 +547,6 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+
+env-variables.env
 # End of https://www.toptal.com/developers/gitignore/api/linux,visualstudio,visualstudiocode,jetbrains+all,macos,windows,go
